@@ -1640,7 +1640,6 @@ sub save_intnotes {
     my $sth = $form->{dbh}->prepare("UPDATE $table SET intnotes = ? " .
                                       "where id = ?");
     $sth->execute($form->{intnotes}, $form->{id});
-    $form->{dbh}->commit;
 }
 
 =back
