@@ -1521,7 +1521,7 @@ sub save_info {
 
 		}
 		
-	    }    
+	    }   
 
 	    if ($form->{callback}){
 		print "Location: $form->{callback}\n";
