@@ -9,6 +9,8 @@ Changelog for 1.3.31
 * R5680-1, (tentatively) fixes to shipping/invoice onhand numbers (Chris T)
 * Fixed customer search showing sales rather than billing addresses (Chris T)
 * Fixed parts descriptions not showing on inventory actibity report (Chris T)
+* Fixed encoding issues when printing from the queue (Chris T, 3602073)
+* Fixed spurious commit in Invoice Shipped (Chris T)
 
 Changelog for 1.3.30
 * Documented behavior of Outstanding Summary report (Chris T, 3601314)
